<resources>
    <string name="app_name">DatabaseExample</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="_100_00">$100.00</string>
    <string name="lista_de_productos">Lista de Productos</string>
    <string name="nombre_del_producto">Nombre del Producto:</string>
    <string name="precio">Precio:</string>
    <string name="producto">Producto</string>
    <string name="guardar">Guardar</string>
    <string name="editar_producto">Editar Producto</string>
    <string name="borrar">Borrar</string>
    <string name="actualizar">Actualizar</string>
</resources>